<resources>
    <string name="app_name">Room Tracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="register">Cadastrar</string>
    <string name="hora_de_termino">Hora de término</string>
    <string name="projetor">Projetor</string>
    <string name="ac">Ar-Condicionado</string>
    <string name="ac_alt">AC</string>
    <string name="insira_breve_descricao_reuniao">Insira uma breve descrição sobre a reunião</string>
    <string name="hora_de_inicio">Hora de início</string>
    <string name="computadores">Computadores</string>
    <string name="computadores_alt">PCs</string>
    <string name="escolha_data_reuniao_calendrio">Escolha a data da reunião no calendário</string>
    <string name="quantidade_de_computadores">quantidade de computadores</string>
    <string name="precisa_de_projetor">precisa de projetor?</string>
    <string name="precisa_de_ar_condicionado">precisa de ar condicionado?</string>
    <string name="save">Salvar</string>
    <string name="descricao_logo">Logo do aplicativo: contorno minimalista branco de um olho cuja pupila é mesa de reunião para cinco pessoas.</string>
    <string name="confirmar">Confirmar</string>
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="cadastre_se_no_roomtracker">Cadastre-se no RoomTracker</string>
    <string name="lembrar_me">Lembrar-me</string>
    <string name="remove">Remover</string>
    <string name="floor">Andar</string>
    <string name="preencha_corretamente">Preencha os dados corretamente</string>
    <string name="senha_min_3_carac">Sua senha precisa ter no mínimo 3 caracteres</string>
    <string name="myenterprise">Minha empresa</string>
    <string name="geren">Gerenciar</string>
    <string name="salas">salas</string>
    <string name="members">membros</string>
    <string name="server_conection_problem_try_again_later">Não foi possível conectar-se ao servidor. Tente novamente mais tarde</string>
    <string name="choosedate">Escolher data</string>
    <string name="reuniaomarcada_singular"> reunião marcada</string>
    <string name="reuniaomarcada_plural"> reuniões marcadas</string>
    <string name="my_reunioes">Minhas reuniões</string>
    <string name="filtrar">Filtrar por sala</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="nome_da_sala">Nome da sala</string>
    <string name="a_sala_possui_um_projetor">A sala possui um projetor?</string>
    <string name="a_sala_possui_um_ar_condicionado">A sala possui um ar-condicionado?</string>
    <string name="capacidade_de_pessoas">Capacidade de pessoas</string>
    <string name="capacidade_de_pessoas_alt">Capacidade</string>
    <string name="quantidade_de_pcs">Quantidade de PCs</string>
    <string name="alterar_cor_da_empresa">Alterar cor da empresa</string>
    <string name="handle_drawer_description">Puxador da tela de gerenciamento</string>
    <string name="data_alteracao">Data de alteração:</string>
    <string name="data_criacao">Data de criação:</string>
    <string name="sundayShort">Dom</string>
    <string name="mondayShort">Seg</string>
    <string name="tuesdayShort">Ter</string>
    <string name="wednesdayShort">Qua</string>
    <string name="thursdayShort">Qui</string>
    <string name="fridayShort">Sex</string>
    <string name="saturdayShort">Sáb</string>
</resources>
